# snake

./: .gitattributes  .gitignore  LICENSE.txt  README.md  __main__.py  audio_manager.py  check_env.py  food.py  game.py  logic.py  main.py  menu.py  mkdocs.yml  obstacles.py  profiles.py  pyproject.toml  pyrightconfig.json  requirements.txt  settings.py  setup.py  snake.py  ui_components.py  utils.py  video_config.py  visual_effects.py
.github/: copilot-instructions.md
.github/instructions/: instructions.instructions.md  llm-agents.md
.github/workflows/: build.yml  linting-python.yml  pipeline with-documentation.yml  pipeline-with-documentation.yml  python-app.yml  release.yml
Data/: config.json  settings.json
Data/assets/: icon_retro.icns
docs/: BUGS_ARREGLADOS.md  CHANGELOG.md  LOGGING_SYSTEM.md  MEJORAS_GRAFICAS.md  New-Feutures.md  PRUEBAS_MULTIPLATAFORMA_COMPLETADAS.md  RESUMEN_FINAL.md  SISTEMA_LOGGING.md  THIRD-PARTY-LICENSES.md
scripts/: build.py  clean.py
src/: __init__.py
src/snake/: __init__.py  audio_manager.py  food.py  game.py  logic.py  main.py  menu.py  obstacles.py  profiles.py  snake.py  snake_entity.py  ui_components.py  utils.py  video_config.py  visual_effects.py
src/snake/core/: __init__.py  food.py  game.py  logic.py  obstacles.py  snake.py
src/snake/modules/: __init__.py  menu.py  obstacles.py  profiles.py  ui_components.py  visual_effects.py
src/snake/system/: __init__.py  audio_manager.py  settings.py  utils.py  video_config.py
src/snake/ui/: __init__.py  base_state.py  components.py  game_play.py  menu.py  options_menu.py  visual_effects.py
src/snake/utils/: __init__.py  config.py  logger.py
