[project]
name = "snake"
version = "1.5.0"
description = "A classic snake game with profile management and settings."
authors = [
    {name = "ParaDevOne"}
]
license = {text = "SOL"}
readme = "README.md"
requires-python = "3.13.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
start = 'main:run'
build = 'setup:main'
build-docs = "mkdocs:main"

# algunas subdependencias adicionales no hay que eliminarlas
# porque no sabes que subdependencias pueden ser necesarias para las dependencias en si

[tool.poetry.dependencies]
pygame = "^2.6.1"
tomlkit = "^0.13.3"
platformdirs = "^4.3.8"
mccabe = "^0.7.0"
dill = "^0.4.0"
colorama = "^0.4.6"
astroid = "^3.3.11"

[tool.poetry.group.dev.dependencies]
isort = "^6.0.1"
pyinstaller = "^6.15.0"
flake8 = "^7.3.0"
pyflakes = "^3.4.0"
pycodestyle = "^2.14.0"
pygments = "^2.19.2"

[tool.poetry.group.docs.dependencies]
mkdocs = "^1.5.0"
mkdocs-material = "^9.0.0"
mkdocstrings = "^0.23.0"
linkchecker = "^0.1.0"
