[project]
name = "snake"
version = "1.8.0"
description = "A snake game."
authors = [
    {name = "ParaDevOne"}
]
license = {text = "SOL"}
readme = "README.md"
requires-python = ">= 3.13.5"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"snake" = ["Data/**/*"]

[project.urls]
repository = "https://github.com/ParaDevOne/snake"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
packages = [{include = "snake", from = "src"}]

[tool.poetry.scripts]
start = 'src.snake.main:run'
build = 'scripts.build:main'

[tool.pyright]
# Modo intermedio: ni flojo ni demente
typeCheckingMode = "standard"

autoImportCompletions = true
useLibraryCodeForTypes = true
# Ajusta según tu proyecto
include = ["src"]
exclude = ["tests", ".venv", "build", "dist", "scripts"]

# Entorno virtual de Poetry dentro del proyecto
venvPath = "."
venv = ".venv"

# Reglas adicionales finas
reportMissingParameterType = false
reportUnknownMemberType = false
reportUnknownParameterType = false
reportMissingReturnType = false

# algunas subdependencias adicionales no hay que eliminarlas
# porque no sabes que subdependencias pueden ser necesarias para las dependencias en si

[tool.poetry.dependencies]
pygame = "^2.6.1"
colorama = "^0.4.6"
tomlkit = "^0.13.3"
platformdirs = "^4.3.8"
mccabe = "^0.7.0"
dill = "^0.4.0"
astroid = "^3.3.11"

[tool.poetry.group.dev.dependencies]
isort = "^6.0.1"
pyinstaller = "^6.15.0"
flake8 = "^7.3.0"
pyflakes = "^3.4.0"
pycodestyle = "^2.14.0"
pygments = "^2.19.2"
